[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/HUD/2thing.png" type="Texture" id=2]
[ext_resource path="res://Assets/HUD/3thing.png" type="Texture" id=3]
[ext_resource path="res://ui/png-divider-lines-divider-line-png-2665.png" type="Texture" id=4]
[ext_resource path="res://ui/EastSeaDokdo-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/HUD/TitleScreen.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 130
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 130
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = 1.0
margin_bottom = -2.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = -1.09109
margin_top = 325.175
margin_right = 370.909
margin_bottom = 462.175
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3thing" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.415686 )
position = Vector2( 173.083, 731.695 )
rotation = 1.57899
scale = Vector2( 0.341037, 2.06761 )
texture = ExtResource( 3 )

[node name="3thing2" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 1537.87, 537.736 )
rotation = 1.57899
scale = Vector2( 0.707933, 4.49613 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.19
margin_left = 443.919
margin_top = 68.0
margin_right = -456.081
margin_bottom = 0.179993
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Zombie Rush"
align = 1
valign = 1
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 968.44, 540.696 )
scale = Vector2( 3.9684, 2.38677 )
texture = ExtResource( 1 )

[node name="Button2" type="Button" parent="."]
margin_left = -6.32526
margin_top = 663.109
margin_right = 367.675
margin_bottom = 800.109
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Exit "
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 1353.14
margin_top = 465.556
margin_right = 1725.14
margin_bottom = 602.556
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Credits"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
visible = false
margin_left = 1256.56
margin_top = 465.449
margin_right = 1813.56
margin_bottom = 602.449
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Highscore List"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="."]
margin_left = 1314.0
margin_top = 819.0
margin_right = 1773.0
margin_bottom = 964.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Controls"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="png-divider-lines-divider-line-png-2665" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 1065.67, 540.287 )
rotation = 1.5708
scale = Vector2( 0.403243, 0.5 )
texture = ExtResource( 4 )

[node name="2thing" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.486275 )
show_behind_parent = true
position = Vector2( 954.75, 136.117 )
rotation = 1.57899
scale = Vector2( 0.369672, 1.8586 )
texture = ExtResource( 2 )

[node name="2thing2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.486275 )
show_behind_parent = true
position = Vector2( 186.631, 405.968 )
rotation = 1.57899
scale = Vector2( 0.295987, 0.344817 )
texture = ExtResource( 2 )

[node name="2thing3" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.486275 )
show_behind_parent = true
position = Vector2( 1550.51, 464.679 )
rotation = 1.57899
scale = Vector2( 0.274948, 0.554288 )
texture = ExtResource( 2 )

[node name="2thing4" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.486275 )
show_behind_parent = true
position = Vector2( 1540.95, 891.449 )
rotation = 1.57899
scale = Vector2( 0.338742, 0.825354 )
texture = ExtResource( 2 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
